--- a/m2.html
+++ b/m2.html
@@ -3,7 +3,7 @@
 <p>%MODEL% can predict the values in last year with RMSE <b>%RMSE%</b>. Observations and predictions are plotted below.</p>
 <img src="%TESTIMG%">
 <h3>Compare Last Value with Prediction</h3>
-<p>%MODEL% expected the value to be <b>%PREDICTION%</b>. Observed value is <b>%OBSERVATION%</b>. The percentage difference is <b>%DIFFERENCE%%</b>. %MESSAGE%.
+<p>%MODEL% expected the value to be <b>%PREDICTION%</b>. Observed value is <b>%OBSERVATION%</b>. The difference is <b>%DIFFERENCE%(%PDIFFERENCE%%)</b>.
 <h3>Predictions of Next 6 Months</h3>
 <p>Predicted values of next 6 months are in the table and plotted below.</p>
 <br>
