--- a/m3.html
+++ b/m3.html
@@ -1,5 +1,6 @@
 </body>
 <footer>
-  <img src="https://www.jotform.com/resources/assets/logo/min/jotform-logo-white-400x200.png">
+  <br>
+  <img src="https://www.jotform.com/resources/assets/logo/jotform-logo-transparent-400x100.png" height="100" width="400">
 </footer>
 </html>
